# MTNess

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  cli_options.cpp  cli_options.h  dataset.cpp  dataset.h  mtness.cpp  types.h
src/data/: batch_transform.h  dataset.cpp  dataset.h  vocab.h
src/models/: att_decoder.cpp  attention.h  decoder.h  encdec.h  encoder.cpp  encoder.h  rnn.cpp  rnn.h  rnn_utils.h  sutskever.cpp
